--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "husky": "^9.1.7",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
@@ -29,6 +30,7 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "sass": "^1.82.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
