--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "prettier": "prettier --check .",
     "format": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "pre-deploy": "next build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "husky": "^9.1.7",
@@ -26,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "github-pages": "^3.0.2",
     "lint-staged": "^15.2.10",
     "postcss": "^8",
     "prettier": "^3.4.2",
