Fix translations for static pages

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "prestart": "next build",
+    "start": "npx serve out",
     "lint": "next lint",
     "prettier": "prettier --check .",
     "format": "prettier --write .",
